# mobile_robot_simulator-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: industrial_ci_action.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/mobile_robot_simulator/: laser_simulator.h  mobile_robot_simulator.h
launch/: simulator.launch
rpm/: ros-humble-mobile-robot-simulator.spec  ros-jazzy-mobile-robot-simulator.spec  ros-kilted-mobile-robot-simulator.spec  ros-lyrical-mobile-robot-simulator.spec  template.spec
src/: laser_simulator.cpp  laser_simulator_node.cpp  mobile_robot_simulator.cpp  mobile_robot_simulator_node.cpp
