<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>mobile_robot_simulator</name>
  <version>2.0.0</version>
  <description>The mobile_robot_simulator package</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>

  <license>BSD</license>

  <author email="mrp@rvmi.aau.dk">Mikkel Rath Pedersen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
